force-app/main/default/objects/Active_Subscription_Line__c/Active_Subscription_Line__c.object-meta.xml
<CustomObject>
    <label>Active Subscription Line</label>
    <nameField>
        <label>Active Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Active Subscription Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>