force-app/main/default/objects/Active_Subscription_Line__c/fields/Active_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscription__c</fullName>
    <label>Active Subscription</label>
    <referenceTo>Active_Subscriptions__c</referenceTo>
    <relationshipLabel>Active Subscription Lines</relationshipLabel>
    <relationshipName>Active_Subscription_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>