force-app/main/default/objects/Active_Subscription_Line__c/fields/Applied_Account__c.field-meta.xml
<CustomField>
    <fullName>Applied_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account that the Active Subscription Line is related to. This determines entitlements within the portal</description>
    <label>Applied Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Active Subscription Lines (Applied Account)</relationshipLabel>
    <relationshipName>Active_Subscription_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>