force-app/main/default/objects/Active_Subscription_Line__c/fields/ASL_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>ASL_Unique_Id__c</fullName>
    <description>Allows an ASL related to a given SLI record to have a unique identifier per SLI quantity. So an SLI with a quantity of 3 would have 3 ASL records, and this field would be SLI.Id + 1,2,3 so forth eg: 01I3Z000001h12V0001,01I3Z000001h12V0002,01I3Z000001h12V0003, etc.</description>
    <externalId>true</externalId>
    <label>ASL Unique Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>