force-app/main/default/objects/Active_Subscription_Line__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>ClientBooks</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
            <value>
                <fullName>Entity Services</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Platform Services</fullName>
            </value>
            <value>
                <fullName>Tax Prep and Advisory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>