force-app/main/default/objects/Active_Subscription_Line__c/fields/ChargeOver_Subscription__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChargeOver Subscription</label>
    <referenceTo>ChargeOver_Subscription__c</referenceTo>
    <relationshipLabel>Active Subscription Lines</relationshipLabel>
    <relationshipName>Active_Subscription_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>