force-app/main/default/objects/Active_Subscription_Line__c/fields/Converted_From_ASL__c.field-meta.xml
<CustomField>
    <fullName>Converted_From_ASL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>As part of the downgrade process, used to relate to the other ASL it replaced.</description>
    <label>Converted From ASL</label>
    <referenceTo>Active_Subscription_Line__c</referenceTo>
    <relationshipLabel>Active Subscription Lines</relationshipLabel>
    <relationshipName>Active_Subscription_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>