force-app/main/default/objects/Active_Subscription_Line__c/fields/Converted_From_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Converted_From_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted From Subscription</label>
    <referenceTo>ChargeOver_Subscription__c</referenceTo>
    <relationshipLabel>Active Subscription Lines (Converted From Subscription)</relationshipLabel>
    <relationshipName>Active_Subscription_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>