force-app/main/default/objects/Active_Subscription_Line__c/fields/Created_by_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if the ASL was created by a renwal invoice</description>
    <inlineHelpText>Checkbox to indicate if the ASL was created by a renwal invoice</inlineHelpText>
    <label>Created by Renewal</label>
    <type>Checkbox</type>
</CustomField>