force-app/main/default/objects/Active_Subscription_Line__c/fields/Paused_Date__c.field-meta.xml
<CustomField>
    <fullName>Paused_Date__c</fullName>
    <description>The date that the related subscription line was marked as Paused/Suspended</description>
    <label>Paused Date</label>
    <type>Date</type>
</CustomField>