force-app/main/default/objects/Active_Subscription_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Active Subscription Lines</relationshipLabel>
    <relationshipName>Active_Subscription_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>