force-app/main/default/objects/Active_Subscription_Line__c/fields/Sale_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Sale_Completed_By__c</fullName>
    <description>The source of the subscription&apos;s original sale</description>
    <formula>TEXT( ChargeOver_Subscription__r.Sale_Completed_By__c )</formula>
    <label>Sale Completed By</label>
    <type>Text</type>
</CustomField>