force-app/main/default/objects/Active_Subscription_Line__c/fields/Sale_Completed_By_Detail__c.field-meta.xml
<CustomField>
    <fullName>Sale_Completed_By_Detail__c</fullName>
    <description>The details of the Sale Completed By field, which may contain any specific website name, partner, or other source</description>
    <formula>ChargeOver_Subscription__r.Sale_Completed_By_Detail__c</formula>
    <label>Sale Completed By Detail</label>
    <type>Text</type>
</CustomField>