force-app/main/default/objects/Active_Subscription_Line__c/fields/Subscription_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Amount__c</fullName>
    <label>Subscription Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>