force-app/main/default/objects/Active_Subscription_Line__c/fields/Tax_Year_Applied__c.field-meta.xml
<CustomField>
    <fullName>Tax_Year_Applied__c</fullName>
    <description>The tax year in which the product was applied</description>
    <label>Tax Year Applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>