force-app/main/default/objects/Active_Subscription_Line__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <description>Used to relate to a specific Active Subscription.</description>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>